--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- <link rel="stylesheet" href="../public/assets/stylesheets/index.css" />
+    <link rel="stylesheet" href="../public/assets/stylesheets/resets.css" /> -->
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <main>
-        <div id="root">
-            <h1>Loading...</h1>
+      <div id="nav-page">
+        <div class="page-container">
+          <h1>Mars Dashboard</h1>
+          <h2>Please choose a NASA Rover</h2>
+          <div class="buttons"></div>
+          <button>CURIOSITY</button>
+          <button>SPIRIT</button>
+          <button>OPPORTUNITY</button>
         </div>
+      </div>
+      <div id="root" class="hidden">
+        <h1>Loading...</h1>
+      </div>
     </main>
-</body>
-<script src="/client.js"></script>
-
+  </body>
+  <script src="/client.js"></script>
 </html>
