Finished UI mobile

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <main>
-      <div id="nav-page">
+      <div class="page-container">
         <div class="landing-container">
           <h1 class="title">Mars Dashboard</h1>
           <h2 class="sub-title">Please choose a NASA Rover</h2>
