made functions pure

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -35,5 +35,5 @@
       </div>
     </main>
   </body>
-  <script src="/client.js"></script>
+  <script type="module" src="/client.js"></script>
 </html>
