--- a/src/public/index.html
+++ b/src/public/index.html
@@ -35,5 +35,6 @@
       </div>
     </main>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/immutable/4.3.1/immutable.js"></script>
   <script type="module" src="/client.js"></script>
 </html>
