--- a/src/public/index.html
+++ b/src/public/index.html
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div id="root" class="hidden">
-        <h1>Loading...</h1>
+        <h1 class="loading">Loading...</h1>
       </div>
     </main>
   </body>
